Recording service rework WIP
