# Logic/EventModel/Runtime/RecordingService.cs
@@ -1,5 +1,6 @@
 using System;
 using System.Collections.Generic;
+using System.Linq;
 using System.Reactive.Concurrency;
 using System.Reactive.Disposables;
 using System.Reactive.Linq;
@@ -7,136 +8,190 @@ using System.Reactive.PlatformServices;
 using System.Reactive.Subjects;
 using System.Runtime.CompilerServices;
 using System.Threading;
+using System.Threading.Tasks;
 using maxbl4.Infrastructure.Extensions.DisposableExt;
 using maxbl4.Infrastructure.Extensions.SemaphoreExt;
+using maxbl4.Infrastructure.MessageHub;
 using maxbl4.Race.Logic.AutoMapper;
 using maxbl4.Race.Logic.Checkpoints;
 using maxbl4.Race.Logic.CheckpointService.Client;
 using maxbl4.Race.Logic.EventModel.Storage.Identifier;
 using maxbl4.Race.Logic.EventModel.Storage.Model;
+using maxbl4.Race.Logic.EventStorage.Storage;
 using maxbl4.Race.Logic.EventStorage.Storage.Traits;
 using Microsoft.Extensions.Options;
 using Serilog;
 
 namespace maxbl4.Race.Logic.EventModel.Runtime
 {
-    public class RecordingService : IRecordingService
+    public class RecordingService : IRecordingService, IDisposable
     {
         private static readonly ILogger logger = Log.ForContext<RecordingService>();
         private readonly IOptions<RecordingServiceOptions> options;
         private readonly IRecordingServiceRepository repository;
+        private readonly IEventRepository eventRepository;
         private readonly ICheckpointServiceClientFactory checkpointServiceClientFactory;
         private readonly IAutoMapperProvider mapper;
+        private readonly IMessageHub messageHub;
         private readonly ISystemClock clock;
         private readonly SemaphoreSlim sync = new(1);
-        private RecordingSessionDto activeSession;
-        private CompositeDisposable disposable;
-        private readonly Subject<Checkpoint> checkpoints = new();
-        private ICheckpointSubscription subscription;
+        private bool isRunning = true;
+        private readonly Dictionary<Id<GateDto>, RfidSession> rfidSessions = new(); 
 
-        public RecordingService(IOptions<RecordingServiceOptions> options, IRecordingServiceRepository repository, ICheckpointServiceClientFactory checkpointServiceClientFactory, IAutoMapperProvider mapper, ISystemClock clock)
+        public RecordingService(IOptions<RecordingServiceOptions> options, 
+            IRecordingServiceRepository repository, IEventRepository eventRepository, ICheckpointServiceClientFactory checkpointServiceClientFactory, 
+            IAutoMapperProvider mapper, IMessageHub messageHub, ISystemClock clock)
         {
             this.options = options;
             this.repository = repository;
+            this.eventRepository = eventRepository;
             this.checkpointServiceClientFactory = checkpointServiceClientFactory;
             this.mapper = mapper;
+            this.messageHub = messageHub;
             this.clock = clock;
+        }
+
+        async Task Heartbeat()
+        {
+            while (isRunning)
+            {
+                using var _ = sync.UseOnce();
+                try
+                {
+                    foreach (var session in repository.GetActiveSessions())
+                    {
+                        repository.SaveSession(session);
+                    }
+                    await Task.Delay(TimeSpan.FromSeconds(30));
+                }
+                catch (Exception ex)
+                {
+                    logger.Warning("Heartbeat error {ex}", ex);
+                }
+            }
         }
 
         public void Initialize()
         {
             using var _ = sync.UseOnce();
             logger.Information("Initialize");
-            var activeSession = repository.GetActiveRecordingSession();
-            if (activeSession != null)
+            var sessions = repository.GetActiveSessions();
+            foreach (var session in sessions)
             {
-                logger.Information("Initialize restarting saved session {id}", activeSession.Id);
-                Start(activeSession);
-            }
-        }
-
-        public void StopRecording()
-        {
-            using var _ = sync.UseOnce();
-            if (activeSession != null)
-            {
-                logger.Information("StopRecording stopping {recordId}", activeSession.Id);
-                repository.UpdateRecordingSession(activeSession.Id, x => x.Stop(clock.UtcNow.UtcDateTime));
-                disposable.DisposeSafe();
-                activeSession = null;
-            }
-            else
-            {
-                logger.Information("StopRecording nothing to do");
-            }
-        }
-
-        public void StartRecording(Id<EventDto> eventId)
-        {
-            using var _ = sync.UseOnce();
-            logger.Information($"StartRecording for event {eventId}", eventId);
-            if (activeSession != null && activeSession.EventId == eventId)
-            {
-                logger.Information($"StartRecording already recording {eventId}", eventId);
-                return;
-            }
-            if (activeSession != null)
-            {
-                logger.Information($"StartRecording stopping previous record {eventId}", eventId);
-                StopRecording();
-            }
-
-            var dto = repository.GetSessionForEvent(eventId);
-            if (dto == null)
-            {
-                dto = new RecordingSessionDto
+                if (clock.UtcNow.UtcDateTime - session.Updated > TimeSpan.FromHours(2))
                 {
-                    EventId = eventId
-                };
-                dto.Start(clock.UtcNow.UtcDateTime);
-                repository.SaveSession(dto);
-                logger.Information("StartRecording created new session event={id}, recording={recordId}", eventId, dto.Id);
+                    logger.Information("Initialize stopping outdated session {id} from {time}", session.Id, session.Updated);
+                    session.Stop(clock.UtcNow.UtcDateTime);
+                    repository.SaveSession(session);
+                }else
+                {
+                    logger.Information("Initialize restarting saved session {id}", session.Id);
+                    if (session.UseRfid)
+                    {
+                        var gate = eventRepository.StorageService.Get(session.GateId);
+                        StartRfidInt(session, gate);
+                    }
+                }
             }
-            Start(dto);
-            activeSession = dto;
+            var __ = Heartbeat();
         }
 
-        private void Start(RecordingSessionDto dto)
+        public Id<RecordingSessionDto> StartRfid(Id<GateDto> gateId)
         {
-            var client = checkpointServiceClientFactory.CreateClient(options.Value.CheckpointServiceAddress);
-            disposable = new CompositeDisposable(
-                subscription = client.CreateSubscription(dto.StartTime),
-                subscription.Checkpoints.Subscribe(x => AppendCheckpoint(activeSession?.Id ?? Id<RecordingSessionDto>.Empty, x))
-            );
-            subscription.Start();
-            //client.SetRfidStatus(true);
+            using var _ = sync.UseOnce();
+            var gate = eventRepository.StorageService.Get(gateId);
+            if (gate == null)
+                throw new KeyNotFoundException($"StartRfid gate {gateId} not found");
+            var dto = repository.GetSessionForGate(gateId);
+            if (!dto.IsRunning)
+            {
+                dto.Start(clock.UtcNow.UtcDateTime);
+                dto.UseRfid = true;
+                repository.SaveSession(dto);
+            }
+            StartRfidInt(dto, gate);
+            return dto.Id;
         }
-        
-        public void AppendCheckpoint(Id<RecordingSessionDto> sessionId, Checkpoint checkpoint)
+
+        public void StopRfid(Id<GateDto> gateId)
+        {
+            using var _ = sync.UseOnce();
+            var gate = eventRepository.StorageService.Get(gateId);
+            if (gate == null)
+                throw new KeyNotFoundException($"StopRfid gate {gateId} not found");
+            var dto = repository.GetSessionForGate(gateId);
+            if (rfidSessions.TryGetValue(gateId, out var rfidSession))
+            {
+                logger.Information("StopRfid stopping rfid for gate {gateId}", gateId);
+                rfidSession.Dispose();
+                rfidSessions.Remove(gateId);
+            }else
+                logger.Warning("StopRfid rfid was not running gate {gateId}", gateId);
+            if (dto.IsRunning)
+            {
+                logger.Information("StopRfid stopping {recordId} for gate {gateId}", dto.Id, gateId);
+                dto.Stop(clock.UtcNow.UtcDateTime);
+                repository.SaveSession(dto);
+            }else
+                logger.Warning("StopRfid {recordId} for gate {gateId} was not running", dto.Id, gateId);
+        }
+
+        private void StartRfidInt(RecordingSessionDto dto, GateDto gate)
+        {
+            if (rfidSessions.TryGetValue(gate.Id, out var rfidSession))
+                rfidSession.Dispose();
+
+            var client = checkpointServiceClientFactory.CreateClient(gate.CheckpointServiceAddress);
+            rfidSessions[gate.Id] = rfidSession = new RfidSession
+            {
+                RecordingSession = dto
+            };
+            rfidSession.Disposable = new CompositeDisposable(
+                rfidSession.Subscription = client.CreateSubscription(dto.StartTime),
+                rfidSession.Subscription.Checkpoints.Subscribe(x => AppendCheckpoint(gate.Id, x))
+            );
+            rfidSession.Subscription.Start();
+            client.SetRfidStatus(true);
+        }
+
+        public Id<RecordingSessionDto> AppendCheckpoint(Id<GateDto> gateId, Checkpoint checkpoint)
         {
             using var _ = sync.UseOnce();
             logger.Information("OnCheckpoint {riderId} {timestamp}", checkpoint.RiderId, checkpoint.Timestamp);
-            if (sessionId == Id<RecordingSessionDto>.Empty) return;
-            var dto = mapper.Map<CheckpointDto>(checkpoint);
-            dto.RecordingSessionId = sessionId;
-            repository.UpsertCheckpoint(dto);
-            if (sessionId == activeSession?.Id)
-                checkpoints.OnNext(checkpoint);
+            RecordingSessionDto dto;
+            if (rfidSessions.TryGetValue(gateId, out var rfidSession))
+                dto = rfidSession.RecordingSession;
+            else
+                dto = repository.GetSessionForGate(gateId);
+            
+            var cp = mapper.Map<CheckpointDto>(checkpoint);
+            cp.RecordingSessionId = dto.Id;
+            repository.UpsertCheckpoint(cp);
+            messageHub.Publish(cp);
+            return dto.Id;
         }
 
-        public IDisposable Subscribe(IObserver<Checkpoint> observer, DateTime from)
+        public void Dispose()
         {
             using var _ = sync.UseOnce();
-            logger.Information($"Subscribe {observer} {from}", observer.GetType().Name, from);
-            if (activeSession == null)
-                throw new NotSupportedException("Must have active recording session");
-            var cps = mapper.Map<List<Checkpoint>>(repository.GetCheckpoints(activeSession.Id, from));
-            var s = cps.ToObservable()
-                .ObserveOn(TaskPoolScheduler.Default)
-                .Concat(checkpoints)
-                .Subscribe(observer);
-            disposable.Add(s);
-            return s;
+            isRunning = false;
+            foreach (var rfidSession in rfidSessions.Values)
+            {
+                rfidSession.Disposable.DisposeSafe();
+            }
+        }
+
+        class RfidSession: IDisposable
+        {
+            public CompositeDisposable Disposable { get; set; }
+            public ICheckpointSubscription Subscription { get; set; }
+            public Subject<Checkpoint> Checkpoints { get; } = new();
+            public RecordingSessionDto RecordingSession { get; set; }
+
+            public void Dispose()
+            {
+                Disposable?.DisposeSafe();
+            }
         }
     }
 }
