# Logic/EventModel/Storage/SeedDataLoader.cs
@@ -1,10 +1,10 @@
 using System;
-using System.Collections.Generic;
 using System.IO;
 using System.Linq;
 using System.Reflection;
 using LiteDB;
 using maxbl4.Infrastructure.MessageHub;
+using maxbl4.Race.Logic.EventModel.Storage.Identifier;
 using maxbl4.Race.Logic.EventModel.Storage.Model;
 using maxbl4.Race.Logic.EventStorage.Storage.Traits;
 using maxbl4.Race.Logic.ServiceBase;
@@ -13,6 +13,12 @@ using Serilog;
 
 namespace maxbl4.Race.Logic.EventStorage.Storage
 {
+    public static class WellknownDtoIdentifiers
+    {
+        public static Id<OrganizationDto> OrganizationId => new Guid("1F95A21E-BBA9-42A3-9C7F-3EB16ACB5CA5");
+        public static Id<GateDto> GateId => new Guid("C737C1F3-4EA2-4491-951F-7DBE339D7BCA");
+    }
+    
     public interface ISeedDataLoader
     {
         void Load();
@@ -36,6 +42,8 @@ namespace maxbl4.Race.Logic.EventStorage.Storage
         public void Load()
         {
             logger.Information("Load");
+            if (options.LoadHardcodedDefaults)
+                LoadHardcodedDefaults();
             var types = Assembly.GetAssembly(typeof(EventDto)).GetTypes().Where(x => x.IsAssignableTo(typeof(IHasTraits))).ToList();
             var files = Directory.GetFiles(options.SeedDataDirectory, "*.json");
             foreach (var file in files)
@@ -60,6 +68,13 @@ namespace maxbl4.Race.Logic.EventStorage.Storage
             }
         }
 
+        private void LoadHardcodedDefaults()
+        {
+            storageService.Save(new OrganizationDto { Id = WellknownDtoIdentifiers.OrganizationId, Name = "braaap.ru"});
+            storageService.Save(new GateDto { Id = WellknownDtoIdentifiers.GateId, OrganizationId = WellknownDtoIdentifiers.OrganizationId, 
+                Name = "Основные ворота", CheckpointServiceAddress = "http://localhost:6000", RfidSupported = true});
+        }
+
         public void ResetAllData()
         {
             logger.Information("ResetAllData");
@@ -71,11 +86,9 @@ namespace maxbl4.Race.Logic.EventStorage.Storage
     
     public class SeedDataLoaderOptions
     {
+        public bool LoadHardcodedDefaults { get; set; } = true;
         public string SeedDataDirectory { get; set; }
     }
 
-    public class ResetAllDataMessage
-    {
-        
-    }
+    public class ResetAllDataMessage { }
 }
